
    * Add support for handling additional 005 parameters: HCN.

    * Compress /NAMES lines (#123).

    * Bail out when invalid arguments are specified on the command-line
      (Emanuele Giaquinta <e.giaquinta@glauco.it>)

    * Make connect to networks non-blocking. (#133)

	* Support IRCD 005 parameter. (#160)

  NEW FEATURES

    * New configuration option for auto-away: "client_limit". If set,
      the connection will never be changed to away if there are more
      than client_limit clients connected. Supersedes "only_noclient";
      to achieve the effect of only_noclient=true, set client_limit=0.
      (Adeodato Simó)

  LICENSING

    * CtrlProxy is now licensed under the GNU GPLv3.

  INTERNALS

    * Moved some common logging code to the core.

Ctrlproxy 3.0.3 2007-07-22

  BUG FIXES

    * Handle 470 response correctly.

    * Recognize supported channel / user modes correctly.
    
    * Properly store topic_set_time and topic_set_by in the 
      linestack. (#108)

    * Reset idle time when AWAY is used in auto-away (#121)

    * Fix crash when using /CTRLPROXY without arguments

    * Don't update config when we're disconnecting during shutdown. (#113)

    * Handle 354 response correctly. (#134)

    * Handle responses after forced joins correctly. (#125)

    * Handle 250 response correctly. (#138)

    * Handle 263 response correctly. (#135)

    * Handle 330 response correclty. (#137)

    * Handle 403 response correctly when sent in response to a MODE 
      query. (#139)

    * Fall back to user name if real name is empty. 

    * Handle 479 responses correctly. (#142)

    * Only send PRIVMSG and NOTICE lines during the BACKLOG command. (#143)

    * Support SILENCE without arguments. 

  INTERNALS

    * Use GIOChannels for reading the motd. 
        (patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

  PORTABILITY
    
    * Include netinet/in.h in src/utils.c and src/network.c. Required 